--- a/client/package.json
+++ b/client/package.json
@@ -16,17 +16,23 @@
     "@mui/styled-engine-sc": "^5.6.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.20",
     "colyseus.js": "^0.14.13",
     "emoji-mart": "^3.0.1",
+    "intersection-observer": "^0.12.2",
     "peerjs": "^1.3.2",
     "phaser": "^3.55.2",
+    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.14.0",
     "react-joystick-component": "^6.0.0",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^7.0.2",
     "sass": "^1.42.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
+    "tailwindcss": "^3.4.16",
     "vite": "^3.0.9"
   },
   "devDependencies": {
