added all files

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,7 @@
     "jsx": "react-jsx",
     "noImplicitAny": false,
     "strictNullChecks": true,
+    "outDir": "dist"
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
