--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.4.20",
     "colyseus.js": "^0.14.13",
     "emoji-mart": "^3.0.1",
+    "framer-motion": "^11.14.4",
+    "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
     "peerjs": "^1.3.2",
     "phaser": "^3.55.2",
