--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   "keywords": [],
   "author": "kevinshen56714",
   "license": "ISC",
-
-
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -33,11 +31,13 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
     "colyseus": "^0.14.0",
     "colyseus.js": "^0.14.12",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongoose": "^8.9.0",
     "phaser": "^3.55.2",
     "regenerator-runtime": "^0.13.7",
     "typescript": "^4.8.2",
