--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
     "esbenp.prettier-vscode",
-    "jpoissonnier.vscode-styled-components",
+    "jpoissonnier.vscode-styled-components"
   ],
   "unwantedRecommendations": []
 }
