--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/nsvoriginals/oasis.git"
   },
   "keywords": [],
-  "author": "kevinshen56714",
+  "author": "NSVORIGINALS",
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -21,6 +21,7 @@
     "copyfiles": "^2.4.1",
     "eslint": "^7.11.0",
     "minimist": ">=1.2.2",
+    "prettier": "^3.4.2",
     "rimraf": "^2.7.1",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63"
